@@ -1,11 +1,11 @@
 requires 'perl'          => '5.010001';
 requires 'JSON::MaybeXS' => '1.001'; # for hash constructor
 requires 'Mojolicious'   => '5.66'; # for nullary true/false
-recommends 'Cpanel::JSON::XS' => '3.0207'; # stringify_blessed and escape_slash
+recommends 'Cpanel::JSON::XS' => '4.09'; # stringify_blessed, escape_slash, allow_dupkeys
 test_requires 'Test::More' => '0.88'; # for done_testing
 test_requires 'Scalar::Util';
 author_requires 'Test::Without::Module' => '0.17';
-author_requires 'Cpanel::JSON::XS' => '3.0214';
+author_requires 'Cpanel::JSON::XS' => '4.09';
 author_requires 'JSON::XS';
 author_requires 'JSON::PP';
 configure_requires 'Module::Build::Tiny';
